# pirathak

./: .aliasdef  .aliasdef-zsh  .check_ip.sh  .hjælp.md  .intro.md  .merehjælp.md  PiratSkib.md  README.md  Vagrantfile  aliasdef  aliasdef-zsh  kort.md  læsmig.md  papegøje  pirat_hacking-arch.sh  pirat_hacking.sh  test.sh
Terminal-træning/: .hemmelig.md  Introduktion.md  intro.md  næste_opgave.md
Terminal-træning/Opgave_2/: .hemmelig.md
Terminal-træning/pirathavn/: kort.md  papegøje  pirathavn  pirathavn.md
esp1/main/: CMakeLists.txt  main.c
esp1_blue_ship/: CMakeLists.txt  partitions.csv
esp1_blue_ship/main/: CMakeLists.txt  main.c
esp2_green_ship/: CMakeLists.txt
esp2_green_ship/main/: main.c
esp3_red_ship/: CMakeLists.txt
esp3_red_ship/components/wifi-captive-portal-esp-idf-component/: CMakeLists.txt  wifi-captive-portal-esp-idf-httpd.c  wifi-captive-portal-esp-idf.c
esp3_red_ship/components/wifi-captive-portal-esp-idf-component/frontend/: package-lock.json
esp3_red_ship/components/wifi-captive-portal-esp-idf-component/frontend/src/: App.css  App.js
esp3_red_ship/components/wifi-captive-portal-esp-idf-component/include/: wifi-captive-portal-esp-idf-httpd.h
esp3_red_ship/main/: CMakeLists.txt  main.c
esp_client/: CMakeLists.txt
esp_client/main/: CMakeLists.txt  main.c
pirathavn/: .aliasdef  fugle
vestmolen/kartografen/: .næste_opgave.md  kartografen.md
vestmolen/lager/: lagerbygning.md
vestmolen/skibsværftet/: powerknap  skibsværftet.md
vestmolen/vodbinderiet/: bedstefarsord  piratflag  rebmaskine  underligbesked  vodbinderiet.md
(+64 files in other folders)
